--- a/requirements-gdn.txt
+++ b/requirements-gdn.txt
@@ -5,15 +5,4 @@ https://data.pyg.org/whl/torch-1.5.0/torch_sparse-0.6.4%2Bcu102-cp37-cp37m-linux
 pandas
 matplotlib
 seaborn
-joblib==1.3.2
-numpy==1.21.6
-packaging==24.0
-patsy==0.5.6
-python-dateutil==2.9.0.post0
-pytz==2024.1
-scikit-learn==1.0.2
-scipy==1.7.3
-six==1.16.0
-statsmodels==0.13.5
-threadpoolctl==3.1.0
-tzdata==2024.1
+numpy
